--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "site-lisp/awesome-tray"]
 	path = site-lisp/awesome-tray
 	url = https://github.com/manateelazycat/awesome-tray.git
+[submodule "site-lisp/lazycat-theme"]
+	path = site-lisp/lazycat-theme
+	url = https://github.com/manateelazycat/lazycat-theme
